--- a/jhotdraw-actions/pom.xml
+++ b/jhotdraw-actions/pom.xml
@@ -24,5 +24,47 @@
             <artifactId>jhotdraw-datatransfer</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+
+    <groupId>junit</groupId>
+
+    <artifactId>junit</artifactId>
+
+    <version>4.13.2</version>
+
+    <scope>test</scope>
+
+</dependency>
+
+<dependency>
+
+        <groupId>org.mockito</groupId>
+
+        <artifactId>mockito-core</artifactId>
+
+        <version>3.12.4</version>
+
+        <scope>test</scope>
+
+    </dependency>
+    <dependency>
+    <groupId>com.tngtech.jgiven</groupId>
+    <artifactId>jgiven-junit</artifactId>
+    <version>1.0.0</version>
+    <scope>test</scope>
+</dependency>
+<dependency>
+    <groupId>org.assertj</groupId>
+    <artifactId>assertj-core</artifactId>
+    <version>3.20.2</version>
+    <scope>test</scope>
+</dependency>
+<dependency>
+    <groupId>org.assertj</groupId>
+    <artifactId>assertj-swing</artifactId>
+    <version>3.17.1</version>
+    <scope>test</scope>
+</dependency>
+
     </dependencies>
 </project>
